Fixed scrollbar position

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,26 @@ body {
     }
 }
 
+/* Scrollbars */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #e83f6f;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #9f9fed;
+}
+
 @media only screen and (max-width: 639px) {
     .animated-underline::after {
         bottom: 0.4rem;
